<resources>
    <!-- Скроковые ресурсы для job4jExam -->
    <string name="app_name">Job4j Exam</string>
    <string name="hello">Привет, Илья Осипов</string>
    <string name="result">Ваш результат теста :</string>
    <string name="resultAnswer">Не верно</string>
    <string name="hint">Подсказка</string>
    <string name="answer">Результат</string>
    <string name="exam_update_name">Создание экзамена</string>
    <string name="exam_edit_name">Редактирование экзамена</string>
    <string name="name">Имя</string>
    <string name="test_name">Имя теста</string>

    <!-- Строки toast -->
    <string name="add_exam">Добавить экзамен</string>
    <string name="delete_exams">Удалить экзамены</string>
    <string name="edit_exams">Редактировать экзамен</string>
    <string name="positive_delete_click">Все удалены</string>
    <string name="negative_delete_click">Отмена удаления</string>
    <string name="positive_edit_click">Экзамен отредактирован</string>
    <string name="positive_exam_remove">Экзамен удален</string>
    <string name="negative_exam_edit">Отмена редактирования</string>

    <!-- Строки диалогов -->
    <string name="show_hint">Показать подсказку?</string>
    <string name="well_done">Молодец!!!</string>
    <string name="edit_dialog">Выберите экзамен для редактирования:</string>
    <string name="delete_exam">Вы хотите удалить экзамен?</string>
    <string name="edit_exam">Отредактировать экзамен?</string>

    <!-- Название переключателей -->
    <string name="radioButton1">Переключатель</string>
    <string name="radioButton2">Переключатель</string>
    <string name="radioButton3">Переключатель</string>
    <string name="radioButton4">Переключатель</string>

    <!-- Название кнопок -->
    <string name="buttonBack">Назад</string>
    <string name="buttonNext">Далее</string>
    <string name="buttonHint">Подсказка</string>
    <string name="buttonListExams">Список экзаменов</string>
    <string name="button_save">Сохранить</string>

    <!-- Название строк в info_exam -->
    <string name="dateExam">дата</string>
    <string name="infoExam">информация</string>
    <string name="resultExam">результат</string>

    <!-- Название в activity_date_time -->
    <string name="date_time">Дата/Время</string>
    <string name="button_date_time">Установить дату и время</string>

    <!-- Строковые ресурсы для меню -->
    <string name="add_item">Добавить</string>
    <string name="menu_add">Добавить новый экзамен?</string>
    <string name="delete_item">Удалить</string>
    <string name="menu_delete">Удалить всё?</string>



    <!-- Массив содежит название областей -->
    <string name="domain_prompt">Выберите область</string>
    <string name="exp_date">Дата проведения испытания</string>
    <string-array name="domain_arrays">
        <item>Выберите область</item>
        <item>Московская</item>
        <item>СПб</item>
    </string-array>

    <!-- Массив содержит числа для даты -->
    <string name="date_prompt">Число</string>
    <string name="exp_date1">Дата проведения испытания</string>
    <string-array name="date_arrays">
        <item>Число</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!-- Массив содержит месяца для даты -->
    <string name="month_prompt">Месяц</string>
    <string name="exp_date2">Дата проведения испытания</string>
    <string-array name="month_arrays">
        <item>Месяц</item>
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <!-- Массив содержит года для даты -->
    <string name="year_prompt">Год</string>
    <string name="exp_date3">Дата проведения испытания</string>
    <string-array name="year_arrays">
        <item>Год</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <!-- Название строк в custom_layout -->
    <string name="date">Дата</string>
    <string name="city">Город</string>
    <string name="name_object">Номер объекта</string>
    <string name="street_house">Улица и дом</string>
    <string name="customer">ФИО заказчика</string>
    <string name="air_temperature">Температура воздуха</string>
    <string name="air_humidity">Влажность воздуха</string>
    <string name="air_pressure">Атмосферное давление</string>
    <string name="report_number">Номер отчёта</string>

    <!-- Сроки приложения фрагменты -->
    <string name="first_fragment">Первый фрагмент!!!</string>
    <string name="next_fragment">Следующий фрагмент</string>
    <string name="second_fragment">Второй фргмент</string>
    <string name="button_fragment_back">Назад</string>

</resources>
