<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/variants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton"
            style="@style/CustomStyleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton1"
            android:textAllCaps="false"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/CustomStyleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton2"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/CustomStyleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton3"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/CustomStyleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton4"
            android:textStyle="italic" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonBack"
            android:textSize="12sp" />

        <Button
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonHint"
            android:textSize="12sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonNext"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/list_exams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonListExams"
        android:textSize="12sp" />
</LinearLayout>