<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/infoExam"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/infoExam"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/resultExam"
        android:layout_width="5dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/resultExam"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/dateExam"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/dateExam"
        android:textColor="@color/textColor" />
</LinearLayout>